调整应用设置相关

--- a/ibas.thirdpartyapp.service/src/main/webapp/resources/languages/bos.zh_CN.json
+++ b/ibas.thirdpartyapp.service/src/main/webapp/resources/languages/bos.zh_CN.json
@@ -4,14 +4,10 @@
         "bo_application_code": "编码",
         "bo_application_name": "名称",
         "bo_application_activated": "激活",
-        "bo_application_appid": "应用标记",
-        "bo_application_appkey": "应用公钥",
-        "bo_application_appsecret": "应用私钥",
-        "bo_application_appurl": "应用地址",
-        "bo_application_apiurl": "应用接口地址",
-        "bo_application_certificate": "证书地址",
-        "bo_application_account": "账号",
-        "bo_application_receivingurl": "接收地址",
+        "bo_application_category": "类别",
+        "bo_application_config": "配置",
+        "bo_application_settings": "设置",
+        "bo_application_remarks": "备注",
         "bo_application_docentry": "对象编号",
         "bo_application_objectcode": "对象类型",
         "bo_application_createdate": "创建日期",
@@ -50,5 +46,60 @@
         "bo_user_updateactionid": "更新动作标识",
         "bo_user_closing_delimiter": "----结束----"
     },
-    {}
+    {
+        "bo_applicationconfig": "应用配置",
+        "bo_applicationconfig_code": "编码",
+        "bo_applicationconfig_name": "名称",
+        "bo_applicationconfig_group": "分组",
+        "bo_applicationconfig_remarks": "备注",
+        "bo_applicationconfig_docentry": "对象编号",
+        "bo_applicationconfig_objectcode": "对象类型",
+        "bo_applicationconfig_createdate": "创建日期",
+        "bo_applicationconfig_createtime": "创建时间",
+        "bo_applicationconfig_updatedate": "修改日期",
+        "bo_applicationconfig_updatetime": "修改时间",
+        "bo_applicationconfig_datasource": "数据源",
+        "bo_applicationconfig_loginst": "实例号（版本）",
+        "bo_applicationconfig_series": "服务系列",
+        "bo_applicationconfig_createusersign": "创建用户",
+        "bo_applicationconfig_updateusersign": "修改用户",
+        "bo_applicationconfig_createactionid": "创建动作标识",
+        "bo_applicationconfig_updateactionid": "更新动作标识",
+        "bo_applicationconfig_applicationconfigitems": "应用配置-项目集合",
+        "bo_applicationconfigitem": "应用配置-项目",
+        "bo_applicationconfigitem_code": "编码",
+        "bo_applicationconfigitem_lineid": "行号",
+        "bo_applicationconfigitem_objectcode": "类型",
+        "bo_applicationconfigitem_createdate": "创建日期",
+        "bo_applicationconfigitem_createtime": "创建时间",
+        "bo_applicationconfigitem_updatedate": "修改日期",
+        "bo_applicationconfigitem_updatetime": "修改时间",
+        "bo_applicationconfigitem_loginst": "版本",
+        "bo_applicationconfigitem_createusersign": "创建用户",
+        "bo_applicationconfigitem_updateusersign": "修改用户",
+        "bo_applicationconfigitem_createactionid": "创建动作标识",
+        "bo_applicationconfigitem_updateactionid": "更新动作标识",
+        "bo_applicationconfigitem_name": "名称",
+        "bo_applicationconfigitem_description": "描述",
+        "bo_applicationconfigitem_category": "类别",
+        "bo_applicationconfigitem_value": "值",
+        "bo_applicationconfig_closing_delimiter": "----结束----"
+    },
+    {
+        "bo_applicationsetting": "应用配置",
+        "bo_applicationsetting_name": "名称",
+        "bo_applicationsetting_group": "组",
+        "bo_applicationsetting_description": "描述",
+        "bo_applicationsettingitem": "应用配置项目",
+        "bo_applicationsettingitem_name": "名称",
+        "bo_applicationsettingitem_category": "类型",
+        "bo_applicationsettingitem_description": "描述",
+        "bo_applicationsettingitem_value": "值",
+        "bo_user_closing_delimiter": "----结束----"
+    },
+    {
+        "em_configitemcategory_text": "文本",
+        "em_configitemcategory_password": "密码",
+        "em_configitemcategory_file": "文件"
+    }
 ]
