--- a/ibas.thirdpartyapp.service/src/main/webapp/resources/languages/thirdpartyapp.zh_CN.json
+++ b/ibas.thirdpartyapp.service/src/main/webapp/resources/languages/thirdpartyapp.zh_CN.json
@@ -11,6 +11,11 @@
   "thirdpartyapp_app_user_choose": "用户选择",
   "thirdpartyapp_app_user_view": "用户查看",
   "thirdpartyapp_app_user_edit": "用户编辑",
+  "thirdpartyapp_func_applicationconfig": "应用配置",
+  "thirdpartyapp_app_applicationconfig_list": "应用配置列表",
+  "thirdpartyapp_app_applicationconfig_choose": "应用配置选择",
+  "thirdpartyapp_app_applicationconfig_view": "应用配置查看",
+  "thirdpartyapp_app_applicationconfig_edit": "应用配置编辑",
   "thirdpartyappusers": "我的应用",
   "thirdpartyappusers_icon": "sap-icon://decision",
   "thirdpartyapp_app_userapplication": "我的应用-{0}",
