--- a/ibas.thirdpartyapp/src/main/resources/i18n/locale.tpa.properties
+++ b/ibas.thirdpartyapp/src/main/resources/i18n/locale.tpa.properties
@@ -1,4 +1,6 @@
 msg_tpa_invaild_application = 无效的应用[%s].
+msg_tpa_invaild_application_config = 无效的应用配置[%s].
+msg_tpa_invaild_application_setting_item = 无效的应用设置项[%s].
 msg_tpa_not_found_application_connect_manager = 没有找到应用[%s]的连接管理员.
 msg_tpa_no_matching_user = 没有匹配的用户.
 msg_tpa_no_param = 没有提供参数[%s].
