调整用户映射相关

--- a/ibas.thirdpartyapp.service/src/main/webapp/resources/languages/bos.zh_CN.json
+++ b/ibas.thirdpartyapp.service/src/main/webapp/resources/languages/bos.zh_CN.json
@@ -6,6 +6,7 @@
         "bo_application_activated": "激活",
         "bo_application_category": "类别",
         "bo_application_config": "配置",
+        "bo_application_picture": "图片",
         "bo_application_settings": "设置",
         "bo_application_remarks": "备注",
         "bo_application_docentry": "对象编号",
@@ -22,29 +23,6 @@
         "bo_application_createactionid": "创建动作标识",
         "bo_application_updateactionid": "更新动作标识",
         "bo_application_closing_delimiter": "----结束----"
-    },
-    {
-        "bo_user": "用户",
-        "bo_user_user": "用户",
-        "bo_user_application": "应用",
-        "bo_user_activated": "激活",
-        "bo_user_mappedid": "映射标记",
-        "bo_user_mappeduser": "映射用户",
-        "bo_user_mappedpassword": "映射密码",
-        "bo_user_objectkey": "对象编号",
-        "bo_user_objectcode": "对象类型",
-        "bo_user_loginst": "实例号",
-        "bo_user_series": "服务系列",
-        "bo_user_datasource": "数据源",
-        "bo_user_createdate": "创建日期",
-        "bo_user_createtime": "创建时间",
-        "bo_user_updatedate": "更新日期",
-        "bo_user_updatetime": "更新时间",
-        "bo_user_createusersign": "创建用户",
-        "bo_user_updateusersign": "更新用户",
-        "bo_user_createactionid": "创建动作标识",
-        "bo_user_updateactionid": "更新动作标识",
-        "bo_user_closing_delimiter": "----结束----"
     },
     {
         "bo_applicationconfig": "应用配置",
@@ -83,7 +61,31 @@
         "bo_applicationconfigitem_description": "描述",
         "bo_applicationconfigitem_category": "类别",
         "bo_applicationconfigitem_value": "值",
+        "bo_applicationconfigitem_foruser": "用户的",
         "bo_applicationconfig_closing_delimiter": "----结束----"
+    },
+    {
+        "bo_usermapping": "用户映射",
+        "bo_usermapping_application": "应用",
+        "bo_usermapping_user": "用户",
+        "bo_usermapping_settings": "设置",
+        "bo_usermapping_account": "应用账户",
+        "bo_usermapping_accessdata": "访问数据",
+        "bo_usermapping_remarks": "备注",
+        "bo_usermapping_objectkey": "对象编号",
+        "bo_usermapping_objectcode": "对象类型",
+        "bo_usermapping_loginst": "实例号",
+        "bo_usermapping_series": "服务系列",
+        "bo_usermapping_datasource": "数据源",
+        "bo_usermapping_createdate": "创建日期",
+        "bo_usermapping_createtime": "创建时间",
+        "bo_usermapping_updatedate": "更新日期",
+        "bo_usermapping_updatetime": "更新时间",
+        "bo_usermapping_createusersign": "创建用户",
+        "bo_usermapping_updateusersign": "更新用户",
+        "bo_usermapping_createactionid": "创建动作标识",
+        "bo_usermapping_updateactionid": "更新动作标识",
+        "bo_usermapping_closing_delimiter": "----结束----"
     },
     {
         "bo_applicationsetting": "应用配置",
