--- a/ibas.thirdpartyapp.service/src/main/webapp/resources/languages/thirdpartyapp.zh_CN.json
+++ b/ibas.thirdpartyapp.service/src/main/webapp/resources/languages/thirdpartyapp.zh_CN.json
@@ -16,6 +16,13 @@
   "thirdpartyapp_app_applicationconfig_choose": "应用配置选择",
   "thirdpartyapp_app_applicationconfig_view": "应用配置查看",
   "thirdpartyapp_app_applicationconfig_edit": "应用配置编辑",
+  "thirdpartyapp_func_usermapping": "用户映射",
+  "thirdpartyapp_app_usermapping_list": "用户映射列表",
+  "thirdpartyapp_app_usermapping_choose": "用户映射选择",
+  "thirdpartyapp_app_usermapping_view": "用户映射查看",
+  "thirdpartyapp_app_usermapping_edit": "用户映射编辑",
+  "thirdpartyapp_not_found_application_setting": "没有找到[{0}]的配置数据",
+  "thirdpartyapp_app_application_setting": "应用设置",
   "thirdpartyappusers": "我的应用",
   "thirdpartyappusers_icon": "sap-icon://decision",
   "thirdpartyapp_app_userapplication": "我的应用-{0}",
@@ -23,5 +30,12 @@
   "thirdpartyapp_title_others": "其他信息",
   "thirdpartyapp_upload_key_file": "上传秘钥",
   "thirdpartyapp_continue_upload_certificate": "是否继续上传证书？",
+  "thirdpartyapp_user_mapping_page_initial": "请选择查看的用户",
+  "thirdpartyapp_initializing_please_wait": "正在初始化，请稍后",
+  "thirdpartyapp_connect_application": "连接应用",
+  "thirdpartyapp_disconnect_application": "断开应用",
+  "thirdpartyapp_not_found_user": "未找到用户",
+  "thirdpartyapp_not_found_application": "未找到应用",
+  "thirdpartyapp_not_found_application_config": "未找到应用设置",
   "thirdpartyapp_closing_delimiter": "----结束----"
 }
