增加英文描述

--- a/ibas.thirdpartyapp.service/src/main/webapp/resources/languages/bos.json
+++ b/ibas.thirdpartyapp.service/src/main/webapp/resources/languages/bos.json
@@ -1,2 +1,107 @@
-{
-}
+[
+    {
+        "bo_application": "Application",
+        "bo_application_code": "Code",
+        "bo_application_name": "Name",
+        "bo_application_activated": "Activated",
+        "bo_application_category": "Category",
+        "bo_application_config": "Configuration",
+        "bo_application_picture": "Picture",
+        "bo_application_settings": "Settings",
+        "bo_application_remarks": "Remarks",
+        "bo_application_docentry": "Object Number",
+        "bo_application_objectcode": "Object Type",
+        "bo_application_createdate": "Creation Date",
+        "bo_application_createtime": "Creation Time",
+        "bo_application_updatedate": "Update Date",
+        "bo_application_updatetime": "Update Time",
+        "bo_application_datasource": "Data Source",
+        "bo_application_loginst": "Instance (Version)",
+        "bo_application_series": "Service Series",
+        "bo_application_createusersign": "Created By",
+        "bo_application_updateusersign": "Updated By",
+        "bo_application_createactionid": "Creation Action ID",
+        "bo_application_updateactionid": "Update Action ID",
+        "bo_application_closing_delimiter": "---- End ----"
+    },
+    {
+        "bo_applicationconfig": "Application Configuration",
+        "bo_applicationconfig_code": "Code",
+        "bo_applicationconfig_name": "Name",
+        "bo_applicationconfig_group": "Group",
+        "bo_applicationconfig_remarks": "Remarks",
+        "bo_applicationconfig_docentry": "Object Number",
+        "bo_applicationconfig_objectcode": "Object Type",
+        "bo_applicationconfig_createdate": "Creation Date",
+        "bo_applicationconfig_createtime": "Creation Time",
+        "bo_applicationconfig_updatedate": "Update Date",
+        "bo_applicationconfig_updatetime": "Update Time",
+        "bo_applicationconfig_datasource": "Data Source",
+        "bo_applicationconfig_loginst": "Instance (Version)",
+        "bo_applicationconfig_series": "Service Series",
+        "bo_applicationconfig_createusersign": "Created By",
+        "bo_applicationconfig_updateusersign": "Updated By",
+        "bo_applicationconfig_createactionid": "Creation Action ID",
+        "bo_applicationconfig_updateactionid": "Update Action ID",
+        "bo_applicationconfig_applicationconfigitems": "Application Configuration Items",
+        "bo_applicationconfigitem": "Application Configuration Item",
+        "bo_applicationconfigitem_code": "Code",
+        "bo_applicationconfigitem_lineid": "Line ID",
+        "bo_applicationconfigitem_objectcode": "Object Type",
+        "bo_applicationconfigitem_createdate": "Creation Date",
+        "bo_applicationconfigitem_createtime": "Creation Time",
+        "bo_applicationconfigitem_updatedate": "Update Date",
+        "bo_applicationconfigitem_updatetime": "Update Time",
+        "bo_applicationconfigitem_loginst": "Version",
+        "bo_applicationconfigitem_createusersign": "Created By",
+        "bo_applicationconfigitem_updateusersign": "Updated By",
+        "bo_applicationconfigitem_createactionid": "Creation Action ID",
+        "bo_applicationconfigitem_updateactionid": "Update Action ID",
+        "bo_applicationconfigitem_name": "Name",
+        "bo_applicationconfigitem_description": "Description",
+        "bo_applicationconfigitem_category": "Category",
+        "bo_applicationconfigitem_value": "Value",
+        "bo_applicationconfigitem_foruser": "For User",
+        "bo_applicationconfig_closing_delimiter": "---- End ----"
+    },
+    {
+        "bo_usermapping": "User Mapping",
+        "bo_usermapping_application": "Application",
+        "bo_usermapping_user": "User",
+        "bo_usermapping_settings": "Settings",
+        "bo_usermapping_account": "Application Account",
+        "bo_usermapping_accessdata": "Access Data",
+        "bo_usermapping_remarks": "Remarks",
+        "bo_usermapping_objectkey": "Object Number",
+        "bo_usermapping_objectcode": "Object Type",
+        "bo_usermapping_loginst": "Instance",
+        "bo_usermapping_series": "Service Series",
+        "bo_usermapping_datasource": "Data Source",
+        "bo_usermapping_createdate": "Creation Date",
+        "bo_usermapping_createtime": "Creation Time",
+        "bo_usermapping_updatedate": "Update Date",
+        "bo_usermapping_updatetime": "Update Time",
+        "bo_usermapping_createusersign": "Created By",
+        "bo_usermapping_updateusersign": "Updated By",
+        "bo_usermapping_createactionid": "Creation Action ID",
+        "bo_usermapping_updateactionid": "Update Action ID",
+        "bo_usermapping_closing_delimiter": "---- End ----"
+    },
+    {
+        "bo_applicationsetting": "Application Setting",
+        "bo_applicationsetting_name": "Name",
+        "bo_applicationsetting_group": "Group",
+        "bo_applicationsetting_description": "Description",
+        "bo_applicationsettingitem": "Application Setting Item",
+        "bo_applicationsettingitem_name": "Name",
+        "bo_applicationsettingitem_category": "Category",
+        "bo_applicationsettingitem_description": "Description",
+        "bo_applicationsettingitem_value": "Value",
+        "bo_user_closing_delimiter": "---- End ----"
+    },
+    {
+        "em_configitemcategory_text": "Text",
+        "em_configitemcategory_password": "Password",
+        "em_configitemcategory_file": "File"
+    }
+]
