--- a/ibas.thirdpartyapp.service/src/main/webapp/resources/languages/thirdpartyapp.json
+++ b/ibas.thirdpartyapp.service/src/main/webapp/resources/languages/thirdpartyapp.json
@@ -1,2 +1,41 @@
 {
+    "thirdpartyapp": "Third Party Application",
+    "thirdpartyapp_icon": "sap-icon://provision",
+    "thirdpartyapp_func_application": "Application",
+    "thirdpartyapp_app_application_list": "Application List",
+    "thirdpartyapp_app_application_choose": "Choose Application",
+    "thirdpartyapp_app_application_view": "View Application",
+    "thirdpartyapp_app_application_edit": "Edit Application",
+    "thirdpartyapp_func_user": "User",
+    "thirdpartyapp_app_user_list": "User List",
+    "thirdpartyapp_app_user_choose": "Choose User",
+    "thirdpartyapp_app_user_view": "View User",
+    "thirdpartyapp_app_user_edit": "Edit User",
+    "thirdpartyapp_func_applicationconfig": "Application Configuration",
+    "thirdpartyapp_app_applicationconfig_list": "Application Configuration List",
+    "thirdpartyapp_app_applicationconfig_choose": "Choose Application Configuration",
+    "thirdpartyapp_app_applicationconfig_view": "View Application Configuration",
+    "thirdpartyapp_app_applicationconfig_edit": "Edit Application Configuration",
+    "thirdpartyapp_func_usermapping": "User Mapping",
+    "thirdpartyapp_app_usermapping_list": "User Mapping List",
+    "thirdpartyapp_app_usermapping_choose": "Choose User Mapping",
+    "thirdpartyapp_app_usermapping_view": "View User Mapping",
+    "thirdpartyapp_app_usermapping_edit": "Edit User Mapping",
+    "thirdpartyapp_not_found_application_setting": "No configuration data found for [{0}]",
+    "thirdpartyapp_app_application_setting": "Application Setting",
+    "thirdpartyappusers": "My Applications",
+    "thirdpartyappusers_icon": "sap-icon://decision",
+    "thirdpartyapp_app_userapplication": "My Application - {0}",
+    "thirdpartyapp_title_general": "General Information",
+    "thirdpartyapp_title_others": "Other Information",
+    "thirdpartyapp_upload_key_file": "Upload Key File",
+    "thirdpartyapp_continue_upload_certificate": "Continue to upload certificate?",
+    "thirdpartyapp_user_mapping_page_initial": "Please select a user to view",
+    "thirdpartyapp_initializing_please_wait": "Initializing, please wait",
+    "thirdpartyapp_connect_application": "Connect Application",
+    "thirdpartyapp_disconnect_application": "Disconnect Application",
+    "thirdpartyapp_not_found_user": "User not found",
+    "thirdpartyapp_not_found_application": "Application not found",
+    "thirdpartyapp_not_found_application_config": "Application configuration not found",
+    "thirdpartyapp_closing_delimiter": "---- End ----"
 }
